Regression: Search in shader node editor exposes nodes that are not available in the current renderer #106138

Closed
opened 2023-03-25 19:48:15 +01:00 by Sun Kim · 1 comment
Contributor

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: Radeon RX 570 Series ATI Technologies Inc. 4.5.0 Core Profile Context 23.3.2.230315

Blender Version
Broken: version: 3.6.0 Alpha, branch: main, commit date: 2023-03-24 22:22, hash: 51bc44420b89
Worked: 3.3

Broken since 3.4.

Caused by bdb5754147

Short description of error
Search in the shader node editor exposes node that are not available in the current renderer.

For example, the Toon BSDF and Hair BSDF nodes do not work and are not available from the Add menu when the render engine is set to EEVEE. Similarly Shader to RGB node does not work and not available in Cycles. But, since 3.4, these nodes are exposed in search when they shouldn't be.

Additionally, the drag search also exposes unavailable nodes since 3.1 (which introduced the drag search).

Exact steps for others to reproduce the error

  • Set the render engine to EEVEE
  • In shader node editor search for Toon BSDF or Hair BSDF
**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: Radeon RX 570 Series ATI Technologies Inc. 4.5.0 Core Profile Context 23.3.2.230315 **Blender Version** Broken: version: 3.6.0 Alpha, branch: main, commit date: 2023-03-24 22:22, hash: `51bc44420b89` Worked: 3.3 Broken since 3.4. Caused by bdb5754147 **Short description of error** Search in the shader node editor exposes node that are not available in the current renderer. For example, the `Toon BSDF` and `Hair BSDF` nodes do not work and are not available from the Add menu when the render engine is set to EEVEE. Similarly `Shader to RGB` node does not work and not available in Cycles. But, since 3.4, these nodes are exposed in search when they shouldn't be. Additionally, the drag search also exposes unavailable nodes since 3.1 (which introduced the drag search). **Exact steps for others to reproduce the error** - Set the render engine to EEVEE - In shader node editor search for `Toon BSDF` or `Hair BSDF`
Sun Kim added the
Severity
Normal
Type
Report
Status
Needs Triage
labels 2023-03-25 19:48:16 +01:00
Iliya Katushenock changed title from Search in shader node editor exposes nodes that are not available in the current renderer to Regression: Search in shader node editor exposes nodes that are not available in the current renderer 2023-03-25 23:26:16 +01:00
Member

Caused by bdb5754147

Discussions in #103108, #101259, #104313 might be related, there is also cc925b9282 ...

(since these are more about Addons -- and not Eevee/Cycles -- will leave open).

CC @HooglyBoogly

Caused by bdb57541475 Discussions in #103108, #101259, #104313 might be related, there is also cc925b92828991f42de9c17d04999630033bc23b ... (since these are more about Addons -- and not Eevee/Cycles -- will leave open). CC @HooglyBoogly
Hans Goudey self-assigned this 2023-03-27 12:44:37 +02:00
Hans Goudey added
Type
Bug
and removed
Type
Report
labels 2023-03-27 20:43:06 +02:00
Hans Goudey added the
Meta
Good First Issue
label 2023-03-27 20:52:06 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-04-19 15:48:34 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#106138
No description provided.