source/blender/editors/space_node/link_drag_search.cc
@@ -288,6 +288,9 @@ static void gather_socket_link_operations(const bContext &C,
     if (!(node_type->poll && node_type->poll(node_type, &node_tree, &disabled_hint))) {
       continue;
     }
+    if (!(node_type->add_ui_poll && node_type->add_ui_poll(&C))) {
+      continue;
+    }
     if (StringRefNull(node_type->ui_name).endswith("(Legacy)")) {
       continue;
     }
