source/blender/nodes/shader/nodes/node_shader_bsdf_translucent.cc
@@ -39,6 +39,7 @@ void register_node_type_sh_bsdf_translucent()
 
   sh_node_type_base(&ntype, SH_NODE_BSDF_TRANSLUCENT, "Translucent BSDF", NODE_CLASS_SHADER);
   ntype.declare = file_ns::node_declare;
+  ntype.add_ui_poll = object_shader_nodes_poll;
   ntype.gpu_fn = file_ns::node_shader_gpu_bsdf_translucent;
 
   nodeRegisterType(&ntype);
